test/bad/generics/call09.px

func f<A>(x: A = "", y: A = ""): Void def
    return

f(['x'])
